--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>personal finance website</title>
-</head>
-<body>
-    <h1>個人理財頁面</h1>
-</body>
-</html>
+{% extends "base.html"%}{% block content %}
+<div id="cash-info">
+    <h2>現金庫存</h2>
+    <table class="table table-bordered">
+        <tr>
+            <td>台幣總額: </td>
+            <td>美金總額: </td>
+            <td>今日匯率: </td>
+            <td>現金總額: </td>
+        </tr>
+    </table>
+</div>
+
+{% endblock %}
+
