處理表單數據與連結資料庫

--- a/templates/cash.html
+++ b/templates/cash.html
@@ -1,6 +1,6 @@
 {% extends "base.html"%}{% block content %}
-<h1>This is the Cash form page.</h1>
-<form mathod= "post" action="http://127.0.0.1:5000/cash">
+
+<form method= "post" action="http://127.0.0.1:5000/cash">
     <div class="mb-3">
         <label for="taiwanese-dollars" class="form-label">臺幣</label>
         <input type="number" class="form-control" id="taiwanese-dollars" name="taiwanese-dollars" />
