資料可視化

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,5 +76,16 @@
     </table>
 </div>
 
+<div id="chart">
+    <figure>
+        <figcaption>股票庫存佔比圖</figcaption>
+        <img src="/static/piechart.jpg" alt="股票庫存佔比圖" />
+    </figure>
+    <figure>
+        <figcaption>資產比例佔比圖</figcaption>
+        <img src="/static/piechart2.jpg" alt="資產比例佔比圖" />
+    </figure>
+</div>
+
 {% endblock %}
 
