fix  picture in html

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,14 +76,14 @@
     </table>
 </div>
 
-<div id="chart">
-    <figure>
+<div id="chart" style="display: flex; flex-wrap: wrap;">
+    <figure style="flex:0 1 500px; margin: 10px">
         <figcaption>股票庫存佔比圖</figcaption>
-        <img src="/static/piechart.jpg" alt="股票庫存佔比圖" />
+        <img style="width: 100%" src="/static/piechart.jpg" alt="股票庫存佔比圖" />
     </figure>
-    <figure>
+    <figure style="flex:0 1 500px; margin: 10px">
         <figcaption>資產比例佔比圖</figcaption>
-        <img src="/static/piechart2.jpg" alt="資產比例佔比圖" />
+        <img style="width: 100%" src="/static/piechart2.jpg" alt="資產比例佔比圖" />
     </figure>
 </div>
 
