--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
             <tr>
                 <th scope="col">股票代號</th>
                 <th scope="col">持有股數</th>
-                <th scope="col">目前股價</th>
+                <th scope="col">目前股價(即時)</th>
                 <th scope="col">目前市值</th>
                 <th scope="col">股票資產佔比(%)</th>
                 <th scope="col">購買總成本(包含手續費)</th>
@@ -77,14 +77,18 @@
 </div>
 
 <div id="chart" style="display: flex; flex-wrap: wrap;">
+    {% if data['show_pic_1']%}
     <figure style="flex:0 1 500px; margin: 10px">
         <figcaption>股票庫存佔比圖</figcaption>
         <img style="width: 100%" src="/static/piechart.jpg" alt="股票庫存佔比圖" />
     </figure>
+    {% endif %}
+    {% if data['show_pic_2']%}
     <figure style="flex:0 1 500px; margin: 10px">
         <figcaption>資產比例佔比圖</figcaption>
         <img style="width: 100%" src="/static/piechart2.jpg" alt="資產比例佔比圖" />
     </figure>
+    {% endif %}
 </div>
 
 {% endblock %}
